--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "7.1.3",
-    "lucide-react": "0.460.0"
+    "lucide-react": "0.460.0",
+    "@google/genai": "^1.39.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
